add payment module